[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "utils"
version = "0.0.2"
authors = [
  { name="Doug Tomm", email="dctomm@gmail.com" },
]
description = "Packging practice"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/altoid/utils"
